--- a/style.css
+++ b/style.css
@@ -66,8 +66,10 @@
 	opacity: .2;
 }
 
-#jogador #jogador-escolha a:hover{
+#jogador #jogador-escolha a:hover,
+#jogador #jogador-escolha a.selecionado, #computador #computador-escolha a.selecionado{
 	opacity: 1;
+
 }
 
 #jogador #jogador-escolha img, #computador #computador-escolha img{
